--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h1 {
   line-height: normal;
 }
 
-section {
+section#cards {
   margin: 0 auto;
   max-width: 1440px;
   padding: 0 5px;
@@ -74,7 +74,6 @@ section {
 
 #hero {
   cursor: url("fleche.svg");
-  background: green;
 }
 
 /* #custom-cursor{
@@ -229,4 +228,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.containerCards {
+  background: blue;
 }/*# sourceMappingURL=style.css.map */
