--- a/css/scss/index/_general.scss
+++ b/css/scss/index/_general.scss
@@ -1,21 +1,18 @@
+html, html * {
+    @include ClashDisplay();
+}
+
 body {
     font-family: Clash Display!important;
     background-color: black;
     color: #FFF;
 }
 
-
 .links{
     display: flex;
     width: fit-content;
     gap: 100px;
 }
-
-.menu {
-    display: flex;
-    gap: 79px;
-}
-
 
 h1{
     width: fit-content;
@@ -25,14 +22,6 @@ h1{
     font-weight: 500;
     text-align: center;
     line-height: normal;
-}
-
-
-section#cards {
-    margin: 0 auto;
-    max-width: 1440px;
-    padding: 0 5px;
-    background: red;
 }
 
 #hero {
@@ -52,8 +41,8 @@ section#cards {
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-  }
-  
+}
+
 #card-presentation {
     background-color: rgba(255, 255, 255, 0.1);
 
@@ -92,10 +81,10 @@ section#cards {
     margin-top: 276px;
 }
 
-#cards{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
+// #cards{
+//     display: grid;
+//     grid-template-columns: repeat(2, 1fr);
+// }
 
 .description-presentation-text {
 color: #FFF;
@@ -156,7 +145,7 @@ line-height: normal;
 }
 
 #brown-card1 {
-    background-color: #635B4C; 
+    background-color: #635B4C;
 
 }
 
@@ -188,13 +177,8 @@ height: 649px;
 }
 
 #purple-card {
-    background-color: #5371FF; 
-
-}
-
-#purple-card {
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-
+    background-color: #5371FF;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
