--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ background: #000;
 }
 
 .link-footer ul li {
-  display: inline-block; 
+  display: inline-block;
   margin-bottom: 10px;
 }
 
@@ -358,11 +358,11 @@ background: #000;
 }
 
 .link-footer ul {
-  padding: 0; 
-  list-style: none; 
+  padding: 0;
+  list-style: none;
 }
 
-.link-footer ul li:last-child { 
+.link-footer ul li:last-child {
   margin-bottom: 0;
 }
 
@@ -392,9 +392,30 @@ background: #000;
 
 .presentation {
   margin: 269px 274px 1224px 181px;
-
 }
 
+.section_positive_points{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2% 9%;
+  flex-wrap: wrap;
+}
+.positive_points{
+  display: flex;
+  align-items: center;
+}
+.img_1{
+  height: 762px;
+  width: 430px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social_blade_stats{
+  width: 259px;
+  height: 450px;
+}
 .h3 {
   font-family: Clash Display;
   font-size: 36px;
@@ -413,4 +434,83 @@ background: #000;
 
 .etudiant-text {
   padding-bottom: 85px;
+}
+
+.statistiques_abonnes {
+  display: inline-flex;
+  align-items: center;
+  gap: 152px;
+  width: 902px;
+height: 573px;
+}
+
+
+#presentation_account_instagram {
+  padding: 2% 9%;
+}
+.tranche_age {
+  width: 490px;
+height: 552.036px;
+flex-shrink: 0;
+padding-left: 60px;
+padding-top: 60px;
+}
+
+.lieux_principaux {
+  width: 490px;
+height: 427px;
+flex-shrink: 0;
+padding-left: 136px;
+padding-top: 60px;
+}
+
+.periode_active {
+  width: 490px;
+  height: 310.752px;
+  flex-shrink: 0;
+  padding-top:30px;
+}
+
+.cible {
+  padding-top: 30px;
+}
+.genre {
+  width: 490px;
+  height: 232.855px;
+  flex-shrink: 0;
+  padding-bottom: 100px;
+  padding-top: 50px;
+
+}
+
+.statistiques_abonnés {
+  width: 490px;
+  height: 850.166px;
+  flex-shrink: 0;
+}
+
+.contenus {
+  margin-top: 100px;
+}
+
+.stratégie_contenus {
+  padding-bottom: 222px;
+  padding: 2% 9%;
+}
+
+.text-presentation-arabian{
+  padding: 2% 9%;
+}
+
+
+.instagram_account_before_all {
+  padding-top: 150px;
+}
+
+.instagram_account_after_all {
+  padding-top: 150px;
+}
+
+.instagram_account_before {
+  padding-top: 50px;
 }
