--- a/css/style.css
+++ b/css/style.css
@@ -541,3 +541,21 @@ padding-top: 60px;
 height: 544px;
 flex-shrink: 0;
 }
+
+.container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
